grammar.js
    source_file: $ => repeat(seq(
      choice(
        $.set_operation,
        $.select_statement,
        $.create_table_statement,
        $.create_view_statement,
        $.create_function_statement,
        $.drop_table_statement,
        $.drop_view_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.merge_statement,
        $.declare_statement,
        $.set_statement,
        $.begin_end_block
      ),
      optional(';')
    )),

    select_statement: $ => seq(
      optional($.with_clause),
      $.select_clause,
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.qualify_clause),
      optional($.window_clause),
      optional($.order_by_clause),
      optional($.limit_clause),
      optional($.offset_clause)
    ),

    select_clause: $ => seq(
      kw('SELECT'),
      optional(choice(kw('DISTINCT'), kw('ALL'))),
      prec.right(
        seq(
          $.select_item,
          repeat(seq(',', $.select_item)),
          optional(',') // Allow trailing comma
        )
      )
    ),

    select_item: $ => prec.right(0, choice(
      $.alias,
      $.star,
      $._expression
    )),

    _expression: $ => optionalParenthesis(choice(
      $.binary_expression,
      $.unary_expression,
      $.in_expression,
      $.exists_expression,
      $.between_expression,
      $.is_null_expression,
      $.case_expression,
      $.cast_expression,
      $.window_function,
      $.function_call,
      $.array_access,
      $.field_access,
      $.subquery,
      $.array_literal,
      $.struct_literal,
      $.interval_literal,
      $.parameter_marker,
      $.system_variable,
      $.backtick_identifier,
      $.identifier,
      $.number_literal,
      $.string_literal,
      $.boolean_literal
    )),

    // Binary expressions with precedence
    // OR has lowest precedence
    binary_expression: $ => choice(
      prec.left(1, seq(
        field('left', $._expression),
        kw('OR'),
        field('right', $._expression)
      )),
      // AND has higher precedence than OR
      prec.left(2, seq(
        field('left', $._expression),
        kw('AND'),
        field('right', $._expression)
      )),
      // Comparison operators and LIKE have higher precedence than AND/OR
      prec.left(3, seq(
        field('left', $._expression),
        choice('=', '!=', '<', '>', '<=', '>=', kw('LIKE')),
        field('right', $._expression)
      )),
      // Addition and subtraction
      prec.left(5, seq(
        field('left', $._expression),
        choice('+', '-'),
        field('right', $._expression)
      )),
      // Multiplication, division, and modulo have highest precedence
      prec.left(6, seq(
        field('left', $._expression),
        choice('*', '/', '%'),
        field('right', $._expression)
      ))
    ),

    // Unary expression (NOT)
    field_access: $ => prec.left(seq(
      field('object', choice(
        $.identifier,
        $.backtick_identifier,
        $.field_access,
        $.array_access
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.backtick_identifier
      ))
    )),

    // Array element access with brackets
    type: $ => choice(
      // Simple types
      kw('INT64'),
      kw('FLOAT64'),
      kw('STRING'),
      kw('BOOL'),
      kw('BYTES'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIME'),
      kw('TIMESTAMP'),
      // Complex types (simplified for now)
      seq(kw('ARRAY'), '<', $.type, '>'),
      seq(kw('STRUCT'), '<', commaSep1($.struct_type_field), '>'),
      // Generic identifier for custom types
      $.identifier
    ),

    merge_statement: $ => seq(
      kw('MERGE'),
      optional(kw('INTO')),
      field('target', choice($.qualified_table_name, $.backtick_identifier, $.identifier)),
      optional(field('target_alias', $.identifier)),
      kw('USING'),
      field('source', choice($.qualified_table_name, $.backtick_identifier, $.identifier, $.subquery)),
      optional(field('source_alias', $.identifier)),
      kw('ON'),
      field('condition', $._expression),
      repeat1(choice(
        $.when_matched_clause,
        $.when_not_matched_clause,
        $.when_not_matched_by_source_clause
      ))
    ),

    when_matched_clause: $ => seq(
      kw('WHEN'),
      kw('MATCHED'),
      optional(seq(kw('AND'), $._expression)),
      kw('THEN'),
      choice(
        seq(kw('UPDATE'), $.set_clause),
        $.delete_action
      )
    ),

    when_not_matched_clause: $ => seq(
      kw('WHEN'),
      kw('NOT'),
      kw('MATCHED'),
      optional(seq(kw('AND'), $._expression)),
      kw('THEN'),
      kw('INSERT'),
      '(',
      commaSep1($.identifier),
      ')',
      kw('VALUES'),
      '(',
      commaSep1($._expression),
      ')'
    ),

    when_not_matched_by_source_clause: $ => seq(
      kw('WHEN'),
      kw('NOT'),
      kw('MATCHED'),
      kw('BY'),
      kw('SOURCE'),
      optional(seq(kw('AND'), $._expression)),
      kw('THEN'),
      choice(
        seq(kw('UPDATE'), $.set_clause),
        $.delete_action
      )
    ),

    delete_action: $ => kw('DELETE'),

    // DECLARE statement
    declare_statement: $ => seq(
      kw('DECLARE'),
      field('variable', $.identifier),
      field('type', $.type),
      optional(seq(
        kw('DEFAULT'),
        field('default_value', $._expression)
      ))
    ),

    // SET statement
    set_statement: $ => seq(
      kw('SET'),
      field('variable', $.identifier),
      '=',
      field('value', $._expression)
    ),

    // Control flow: BEGIN...END block
    begin_end_block: $ => seq(
      kw('BEGIN'),
      repeat($._block_statement),
      kw('END')
    ),

    // Helper rule for statements inside BEGIN...END or IF blocks
    _block_statement: $ => seq(
      choice(
        $.select_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.merge_statement,
        $.declare_statement,
        $.set_statement,
        $.if_statement,
        $.while_statement,
        $.loop_statement,
        $.repeat_statement,
        $.break_statement,
        $.continue_statement,
        $.leave_statement,
        $.begin_end_block
      ),
      optional(';')
    ),

    // Control flow: IF statement
    if_statement: $ => seq(
      kw('IF'),
      field('condition', $._expression),
      kw('THEN'),
      repeat($._block_statement),
      repeat($.elseif_clause),
      optional($.else_clause),
      kw('END'),
      kw('IF')
    ),

    elseif_clause: $ => seq(
      kw('ELSEIF'),
      field('condition', $._expression),
      kw('THEN'),
      repeat($._block_statement)
    ),

    else_clause: $ => seq(
      kw('ELSE'),
      repeat($._block_statement)
    ),

    // Loop constructs
    while_statement: $ => seq(
      kw('WHILE'),
      field('condition', $._expression),
      kw('DO'),
      repeat($._block_statement),
      kw('END'),
      kw('WHILE')
    ),

    loop_statement: $ => seq(
      kw('LOOP'),
      repeat($._block_statement),
      kw('END'),
      kw('LOOP')
    ),

    repeat_statement: $ => seq(
      kw('REPEAT'),
      repeat($._block_statement),
      kw('UNTIL'),
      field('condition', $._expression),
      kw('END'),
      kw('REPEAT')
    ),

    // Loop control statements
    break_statement: $ => kw('BREAK'),

    continue_statement: $ => kw('CONTINUE'),

    set_clause: $ => seq(
      kw('SET'),
      commaSep1($.assignment)
    ),

    assignment: $ => seq(
      field('column', choice($.field_access, $.identifier)),
      '=',
      field('value', $._expression)
    ),

    // Stage 10: Advanced features
    number_literal: $ => /\d+/,

    string_literal: $ => choice(
      seq("'", /[^']*/, "'"),
      seq('"', /[^"]*/, '"')
    ),

    boolean_literal: $ => choice(
      kw('TRUE'),
      kw('FALSE')
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    // Parameter marker (@param_name)
